--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,10 @@
-<h1>TexBlock</h1>
-<p>The app to help you stop texting</p>
+<div class="jumbotron">
+
+	<h1>TexBlock</h1>
+	<p>The app to help you stop texting</p>
+
+  <p>
+    <a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a>
+    <a class="btn btn-danger btn-lg" role="button" href="http://www.textinganddrivingsafety.com/text-free-driving-pledge/">The Pledge</a>
+  </p>
+</div>
