about changes, layout changes

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,25 @@
-<h1>This is my about page.</h1>
-<p>There are many like it, but this one is mine.</p>
+<h1>What is TexBlock?</h1>
+
+<p>TexBlock is a phone application that communicates with a signal (either GPS or a secondary device) and automatically shuts down user-selected applications.  This app allows users to take control by identifying what applications pose a threatening distraction to them while in their car.  This app is a mechanism to help reduce the number of distracted drivers on the road and decrease the number of injuries and deaths directly related to distracted driving.</p>
+
+
+<h1>Why is TexBlock important?</h1>
+<p>In 2011, 23% of all car crashes were reported as cell phone related.  That’s 1.3 million crashes; and that’s only the number that was accurately reported.  Smart phones have a number of applications that often seem to demand our attention while driving—maps, music, messaging, images, internet.</p>
+
+<p>According to the US Department of Transportation, “Young drivers report the highest level of phone involvement in crash or near-crash incidences.”  Even if the driver isn’t hurt, their distraction can have severe legal consequences if the other party is injured or damage is inflicted.</p>  
+
+<p>“A quarter of teens respond to a text message once or more every time they drive. 20 percent of teens and 10 percent of parents admit that they have extended, multi-message text conversations while driving.” Official US Government Website for Distracted Driving, Distraction.Gov.  In the United States alone, 90% of adults have a cell phone and 58% of those users have a Smartphone.  Within this user pool, 67% of cell owners reportedly check their phones for messages, alerts, or calls—even if their phone isn’t ringing.  By 2012, over 17.3 billion text messages were sent by these users every month.</p>  
+
+<p>In order to limit the number of users whose texting results in fatal crashes, the number of people operating their phones while driving needs to be reduced.</p>  
+
+
+<h1>Fixing the Problem</h1>
+<p>Users go onto TexBlock.com and set up a profile.  Each profile begins with a name, email, password, and cell phone number. The user is then prompted for a verification code, which has been sent to the number you provided via text message.  Once the user’s number is verified they enter the website.  The profile allows for multiple cell phones, with one being set as the primary user/installer; each cell phone must be verified prior to use of TexBlock.  Each profile allows users to pair their phone with one or more cars or device IDs.</p>
+
+<p>The user then plugs their phones into their computer.  The online interface identifies all of the apps on the phone and allows users to pick which applications to block on their phone.</p>
+
+<p>When the phone is in a car in motion it automatically locks down the pre-selected applications and does not re-open them until the car has stopped.  TexBlock communicates directly with the GPS in cars; for earlier model cars without GPS, there is a secondary device available for purchase.  This devise can be installed in the car and signals to the phone when the car is and is not in motion.</p> 
+
+<p>If calling is chosen as a blocked app, the web app will prompt the installer to select a set number of “emergency” contacts whose calls will go through regardless (this included 911).  This feature is useful for new drivers who may need to stay in contact with a parent or for adults who need to take a work call or maintain contact with their children.</p>  
+
+<p>If a guardian is installing the app on a dependent’s mobile device, the app has an added security design that prevents its deletion without authorization.  If this security feature is turned on and the user tries to delete TexBlock, the installer will be contacted by either email or phone (depending on preference).  The app can then be deleted following the authorization of the person who installed TexBlock.</p>  
