--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,15 +36,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SP<i class="fa fa-circle"></i>T</a>
+          <a class="navbar-brand" href="#">TexBl<i class="fa fa-play-circle"></i>ck</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="statistics.html">SERVICES</a></li>
-            <li><a href="media.html">WORKS</a></li>
-            <li><a href="userstories.html">SHOUTOUTS</a></li>
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/services">SERVICES</a></li>
+            <li><a href="/usershoutouts">USER SHOUTOUTS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
                     <% if user_signed_in? %>
               <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
@@ -181,7 +180,7 @@
   <div id="f">
     <div class="container">
       <div class="row centered">
-        <a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
+        <a href="#"><i class="fa fa-android"></i></a><a href="#"><i class="fa fa-phone"></i></a><a href="#"><i class="fa fa-apple"></i></a>
     
       </div><!-- row -->
     </div><!-- container -->
@@ -199,15 +198,15 @@
         </div>
         <div class="modal-body">
             <div class="row centered">
-              <p>We are available 24/7, so don't hesitate to contact us.</p>
+              <p>We are available 24/7, so don't hesitate to contact us with questions.</p>
               <p>
-                Somestreet Ave, 987<br/>
-            London, UK.<br/>
-            +44 8948-4343<br/>
-            hi@blacktie.co
+            Bates College<br/>
+            2 Andrews Rd<br/>
+            Lewiston, ME 04240<br/>
+            mbrady4@bates.edu
               </p>
               <div id="mapwrap">
-    <iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2864.9222621237614!2d-70.20318600000003!3d44.10559600000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb26b95e156aed5%3A0xe09394fc40abee2!2sBates+College!5e0!3m2!1sen!2sus!4v1400625080357" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
           </div>  
             </div>
         </div>
