pages click, icon fixes

--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -1,60 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>TexBlock- the app to help you stop texting and driving</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">TexBl<i class="fa fa-play-circle"></i>ck</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="/about">ABOUT</a></li>
-            <li><a href="/services">SERVICES</a></li>
-            <li><a href="/usershoutouts">USER SHOUTOUTS</a></li>
-            <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
-                    <% if user_signed_in? %>
-              <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-            <% else %>
-              <li><%= link_to "Sign Up", new_user_registration_path %></li>
-              <li><%= link_to "Sign In", new_user_session_path %></li>
-            <% end %> 
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-    
 	<div id="blue">
 		<div class="container">
 			<div class="row centered">
@@ -71,13 +14,13 @@
 		<div class="row centered">
 			<br><br>
 			<div class="col-lg-4">
-				<i class="fa fa-automobile"></i>
+				<i class="fa fa-cloud"></i>
 				<h4>MESSAGING BLOCK</h4>
 				<p>End your distractions while driving by eliminating the problem! Our text blocking software blocks incoming text messages until your car is no longer moving.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
-				<i class="fa fa-cogs"></i>
+				<i class="fa fa-phone"></i>
 				<h4>CALL BLOCKING</h4>
 				<p>We spend so much time talking on our phones and not focusing on the road.  This feature lets you block incoming phone calls but still have your emergency contacts go through.</p>
 			</div><!-- col-lg-4 -->
@@ -92,19 +35,19 @@
 		<div class="row centered">
 			<br><br>
 			<div class="col-lg-4">
-				<i class="fa fa-heart"></i>
+				<i class="fa fa-cogs"></i>
 				<h4>AUTHENTICATION</h4>
 				<p>Each phone that is added to your profile has a unique verification code.  Type that code in to get started.  We won't let anyone block your apps without you knowing about it.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
-				<i class="fa fa-shopping-cart"></i>
+				<i class="fa fa-smile-o"></i>
 				<h4>VERIFIED DELETION</h4>
 				<p>If you are installing TexBlock for your child you probably don't want them deleting it right after.  We have a verification setting that alerts you before the app is deleted so you can either verify or deny!</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
-				<i class="fa fa-cloud"></i>
+				<i class="fa fa-coffee"></i>
 				<h4>EDUCATION</h4>
 				<p>We are doing our best to keep you informed on how the end texting and driving initiative is going.  Just keep checking in with our homepage to see the latest news on texting and driving.</p>
 			</div><!-- col-lg-4 -->
