--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,10 +1,160 @@
-<div class="jumbotron">
-
-    <h1>TexBlock</h1>
-    <p>The app to help you stop texting</p>
-
-  <p>
-    <a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a>
-    <a class="btn btn-danger btn-lg" role="button" href="http://www.textinganddrivingsafety.com/text-free-driving-pledge/">The Pledge</a>
+ <div id="headerwrap">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-8 col-lg-offset-2">
+        <h1><b>TexBlock</b></h1>
+        <h2>Help end texting and driving!</h2>
+          <p>
+    <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary btn-lg" %>
   </p>
-</div>
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!-- headerwrap -->
+
+  <div class="container w">
+    <div class="row centered">
+      <br><br>
+      <div class="col-lg-4">
+        <i class="fa fa-star"></i>
+        <h4>Why TexBlock?</h4>
+        <p>In 2011, 23% of all car crashes were reported as cell phone related. That’s 1.3 million crashes; and that’s only the number that was accurately reported. Smart phones have a number of applications that often seem to demand our attention while driving—maps, music, messaging, images, internet.</p>
+      </div><!-- col-lg-4 -->
+
+      <div class="col-lg-4">
+        <i class="fa fa-phone"></i>
+        <h4>What do we work with?</h4>
+        <p>We can handle your iOS and android devices. If you have a phone number, we can help you limit texting while driving!</p>
+      </div><!-- col-lg-4 -->
+
+      <div class="col-lg-4">
+        <i class="fa fa-heart"></i>
+        <h4>Do I really need TexBlock?</h4>
+        <p>There is no such thing as safe texting and driving. In the United States alone, 90% of adults have a cell phone and 58% of those users have a Smartphone. Within this user pool, 67% of cell owners reportedly check their phones for messages, alerts, or calls—even if their phone isn’t ringing.</p>
+      </div><!-- col-lg-4 -->
+    </div><!-- row -->
+    <br>
+    <br>
+  </div><!-- container -->
+
+
+  <!-- PORTFOLIO SECTION -->
+  <div id="dg">
+    <div class="container">
+      <div class="row centered">
+        <h4>MEDIA</h4>
+        <br>
+          <div class="tilt">
+           <div class="vid">
+                <iframe width="275" height="155" src="//www.youtube.com/embed/dht-Vy25jPs" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+
+          <div class="tilt">
+           <div class="vid">
+                <iframe width="275" height="155" src="//www.youtube.com/embed/30SpScVCfAI" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+
+          <div class="tilt">
+           <div class="vid">
+                <iframe width="275" height="155" src="//www.youtube.com/embed/0DH1JGlYOL0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!-- DG -->
+
+
+  <!-- FEATURE SECTION -->
+  <div class="container wb">
+    <div class="row centered">
+      <br><br>
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>SHOUTOUTS FROM OUR USERS</h4>
+          <p><i>Hi, I’m </i><b>Joanne</b><i>. I have two teenage daughters who are constantly on their phones.  They both recently started driving on their own and I am nervous about how concentrated they are on the road. As new drivers, I don’t think they understand how dangerous cars are and that being distracted could hurt them or somebody else. Since I can’t be in the car with them all the time I started using the app, TexBlock.  At first they were really mad, but after the first week they got used to it and some of their friends’ parents started using it as well. I feel safer with the app because I know that it helps minimize their distractions and I can still get in contact with them if needed.</i></p>
+
+          <p><i>My name is </i><b>Becca</b><i>, I’m 22 years old and finishing up college. I drive 3 hours back and forth to school and get really bored. I usually text my friends or talk to them on the phone while I drive. I’ve had a couple close calls on the highway while I was texting. One time I was in bumper-to-bumper traffic and almost rear-ended the car in front of me.  The second time I almost collided with someone merging into my lane.  I’ve tried to limit how often I text by putting my phone on silent, but I still see the messages when I go to change the song on my phone and text back without thinking. I'm excited that this app reminds me not to use my phone and helps me be less distracted while I am driving.</i></p>
+
+          <p><i>Hello, my name is </i><b>Burt</b><i>. I’m 52 years old and own a car service. Recently I’ve had passengers report that drivers were using their phones while driving. The safety of my passengers comes first and I can’t have passengers reporting that my drivers are distracted. I started using TexBlock last month. Some of my drivers have left it on their phones as a constant reminder to not use their phones while they drive.  Others have me authorize its deletion at the end of every day. I really like the application and have seen more satisfied customers. I love the app and have started using it myself!</i></p>
+
+      <p><br/><br/></p>
+    </div><!-- row -->
+  </div><!-- container -->
+
+
+  <div id="lg">
+    <div class="container">
+      <div class="row centered">
+        <h4>MEET THE TEAM BEHIND OUR APP</h4>
+        <p></p>
+        <div class="col-lg-2 col-lg-offset-2">
+          <img src="assets/img/pic.jpg" alt="" class="img-circle">
+        </div>
+        <div class="col-lg-2">
+          <img src="assets/img/pic2.jpg" alt="" class="img-circle">
+        </div>
+        <div class="col-lg-2">
+          <img src="assets/img/pic3.jpg" alt="" class="img-circle">
+        </div>
+        <div class="col-lg-2">
+          <img src="assets/img/pic4.jpg" alt="" class="img-circle">
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!-- dg -->
+  
+  
+  <div id="r">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-10 col-lg-offset-1">
+          <h4>WE HAVE THE CAPACITY TO SAVE LIVES BY REDUCING THE NUMBER OF DISTRACTED DRIVERS</h4>
+          <p>TexBlock is a phone application that communicates with a signal (either GPS or a secondary device) and automatically shuts down user-selected applications.  This app allows users to take control by identifying what applications pose a threatening distraction to them while in their car.  This app is a mechanism to help reduce the number of distracted drivers on the road and decrease the number of injuries and deaths directly related to distracted driving.</p>
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><! -- r wrap -->
+  
+  
+  <!-- FOOTER -->
+  <div id="f">
+    <div class="container">
+      <div class="row centered">
+        <a href="#"><i class="fa fa-android"></i></a><a href="#"><i class="fa fa-phone"></i></a><a href="#"><i class="fa fa-apple"></i></a>
+    
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!-- Footer -->
+
+
+  <!-- MODAL FOR CONTACT -->
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">contact us</h4>
+        </div>
+        <div class="modal-body">
+            <div class="row centered">
+              <p>We are available 24/7, so don't hesitate to contact us with questions.</p>
+              <p>
+            Bates College<br/>
+            2 Andrews Rd<br/>
+            Lewiston, ME 04240<br/>
+            mbrady4@bates.edu
+              </p>
+              <div id="mapwrap">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2864.9222621237614!2d-70.20318600000003!3d44.10559600000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb26b95e156aed5%3A0xe09394fc40abee2!2sBates+College!5e0!3m2!1sen!2sus!4v1400625080357" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+          </div>  
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Save & Go</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
