--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -15,7 +15,7 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-cloud"></i>
-				<h4>MESSAGING BLOCK</h4>
+				<h4>MESSAGING BLOCKING</h4>
 				<p>End your distractions while driving by eliminating the problem! Our text blocking software blocks incoming text messages until your car is no longer moving.</p>
 			</div><!-- col-lg-4 -->
 
@@ -61,7 +61,7 @@
 			<div class="row centered">
 				<h4>PRICING?</h4>
 				<br>
-				<div class="col-lg-4">
+				<div class="col-lg-6">
                     <!-- START PRICING TABLE -->
                     <div class="pricing-option">
                         <div class="pricing-top">
@@ -76,12 +76,11 @@
                             <li><strong>24/7</strong> Support</li>
                             <li>Compatable with <strong>ios and android</strong> devices</li>
                         </ul>
-                        <a href="index.html#" class="pricing-signup">Sign up</a>
                     </div><!-- /pricing-option -->
                     <!-- END PRICING TABLE -->
 				</div><!-- /col -->
 				
-				<div class="col-lg-4">
+				<div class="col-lg-6">
                     <!-- START PRICING TABLE -->
                     <div class="pricing-option">
                         <div class="pricing-top">
