--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -14,27 +14,27 @@
 		<div class="row centered">
 			<br><br>
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic.jpg" width="110" height="110" alt="">
-				<h4>Frank Lampard</h4>
-				<p>He does some stuff.</p>
+				<img class="img-circle" src="assets/img/mich.jpg" width="110" height="110" alt="">
+				<h4>Michaela Brady</h4>
+				<p>She does some stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic2.jpg" width="110" height="110" alt="">
-				<h4>David Wright</h4>
-				<p>He handles other stuff.</p>
+				<img class="img-circle" src="assets/img/cat.jpg" width="110" height="110" alt="">
+				<h4>Cat Dioli</h4>
+				<p>She handles other stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic3.jpg" width="110" height="110" alt="">
-				<h4>Mark Milestone</h4>
-				<p>He does more stuff.</p>
+				<img class="img-circle" src="assets/img/chelsea.jpg" width="110" height="110" alt="">
+				<h4>Chelsea Thompson</h4>
+				<p>She does more stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
 				<img class="img-circle" src="assets/img/pic4.jpg" width="110" height="110" alt="">
 				<h4>Tania Tissen</h4>
-				<p>She sometimes does stuff.</p>
+				<p>Just joined in.</p>
 			</div><!-- col-lg-3 -->
 
 		</div><!-- row -->
