--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -90,16 +90,16 @@
         <h4>MEET THE TEAM BEHIND OUR APP</h4>
         <p></p>
         <div class="col-lg-2 col-lg-offset-2">
-          <img src="assets/img/pic.jpg" alt="" class="img-circle">
+          <img class="img-circle" src="assets/img/mich.jpg" width="130" height="130" alt="">
         </div>
         <div class="col-lg-2">
-          <img src="assets/img/pic2.jpg" alt="" class="img-circle">
+          <img class="img-circle" src="assets/img/cat.jpg" width="130" height="130" alt="">
         </div>
         <div class="col-lg-2">
-          <img src="assets/img/pic3.jpg" alt="" class="img-circle">
+          <img class="img-circle" src="assets/img/chelsea.jpg" width="130" height="130" alt="">
         </div>
         <div class="col-lg-2">
-          <img src="assets/img/pic4.jpg" alt="" class="img-circle">
+          <img class="img-circle" src="assets/img/pic4.jpg" width="130" height="130" alt="">
         </div>
       </div><!-- row -->
     </div><!-- container -->
