trying to fix colors

--- a/app/views/page/usershoutouts.html.erb
+++ b/app/views/page/usershoutouts.html.erb
@@ -14,7 +14,7 @@
 		<div class="row">
 			<br><br>
 			<div class="col-lg-6 centered">
-				<img src="assets/img/p03.png" alt="">
+				<img src="assets/img/helene.jpg" alt="" height="350" width="300">
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6">
 				<h4>Joanne Moody</h4>
@@ -27,7 +27,7 @@
 		<br><br>
 		<div class="row">
 			<div class="col-lg-6 centered">
-				<img src="assets/img/p01.png" alt="">
+				<img src="assets/img/andrea.jpg" alt="" height="350" width="300">
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6">
 				<h4>Becca Ruth</h4>
@@ -40,7 +40,7 @@
 		<br><br>
 		<div class="row">
 			<div class="col-lg-6 centered">
-				<img src="assets/img/p02.png" alt="">
+				<img src="assets/img/carsales.jpg" alt="" height="350" width="300">
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6">
 				<h4>Burt Michaelson</h4>
