--- a/app/assets/stylesheets/css/main.css
+++ b/app/assets/stylesheets/css/main.css
@@ -2,7 +2,7 @@
  * Author: Carlos Alvarez
  * URL: http://alvarez.is
  *
- * Project Name: TexBlock - 
+ * Project Name: SPOT - Free Bootstrap 3 Theme
  * Version: 1.0
  * URL: http://blacktie.co
  */
@@ -83,32 +83,32 @@ a:after {
 
 
 .navbar {
-	font-weight: 800;
-	font-size: 14px;
-	padding-top: 15px;
-	padding-bottom: 15px;
+    font-weight: 800;
+    font-size: 14px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .navbar-inverse {
-	background: #2d2d2d;
-	border-color: #2d2d2d;
+    background: #2d2d2d;
+    border-color: #2d2d2d;
 }
 
 .navbar-inverse .navbar-nav > .active > a {
-	background: #ff7878
+    background: #ff7878
 }
 
 .navbar-inverse .navbar-brand {
-	color: #999999;
-	font-weight: bolder;
-	font-size: 22px;
-	letter-spacing: 1px;
+    color: #999999;
+    font-weight: bolder;
+    font-size: 22px;
+    letter-spacing: 1px;
 }
 
 .navbar-inverse .navbar-brand i {
-	color: #ff7878;
-	font-size: 22px;
-	letter-spacing: 1px;
+    color: #ff7878;
+    font-size: 22px;
+    letter-spacing: 1px;
 }
 
 /*TILT*/
@@ -133,15 +133,15 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/background.jpg) no-repeat center top;
-	margin-top: -10px;
-	padding-top:20px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 500px;
-	width: 100%;
-	
+    background: url(../img/background.jpg) no-repeat center top;
+    margin-top: -10px;
+    padding-top:20px;
+    text-align:center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 500px;
+    width: 100%;
+    
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -154,154 +154,154 @@ a:after {
 }
 
 #headerwrap h1 {
-	margin-top: 100px;
-	color: white;
-	font-size: 70px;
-	font-weight: 300;
-	letter-spacing: 3px;
+    margin-top: 100px;
+    color: white;
+    font-size: 70px;
+    font-weight: 300;
+    letter-spacing: 3px;
 }
 
 #headerwrap h2 {
-	color: white;
-	font-size: 40px;
-	font-weight: 700;
-	letter-spacing: 2px;
-	text-transform: uppercase;
+    color: white;
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 /* Dark Grey Wrap */
 #dg {
-	background: #e0e0e0;
-	padding-top: 70px;
-	padding-bottom: 70px;
-	text-align: center;
+    background: #e0e0e0;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    text-align: center;
 }
 
 #dg h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 /* Light Grey */
 #lg {
-	background: #ebebeb;
-	padding-top: 70px;
-	padding-bottom: 70px;
-	text-align: center;
+    background: #ebebeb;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    text-align: center;
 }
 
 #lg h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 
 /* Red Wrap */
 #r {
-	background: #ff7878;
-	padding-top: 35px;
-	padding-bottom: 35px;
+    background: #ff7878;
+    padding-top: 35px;
+    padding-bottom: 35px;
 }
 
 #r h4 {
-	color: white;
-	font-weight: 700;
+    color: white;
+    font-weight: 700;
 }
 
 #r p {
-	color: white;
+    color: white;
 }
 
 /* Blue Wrap */
 
 #blue {
-	background: #3498db;
-	padding-top: 35px;
-	padding-bottom: 35px;
+    background: #3498db;
+    padding-top: 35px;
+    padding-bottom: 35px;
 }
 
 #blue h4 {
-	color: white;
-	font-weight: 700;
+    color: white;
+    font-weight: 700;
 }
 
 #blue p {
-	color: white;
+    color: white;
 }
 
 
 
 /* Footer Wrap */
 #f {
-	background: #2d2d2d;
-	padding-top: 30px;
-	padding-bottom: 30px;
+    background: #2d2d2d;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #f i {
-	color: #bdbdbd;
-	font-size: 30px;
-	padding: 20px;
+    color: #bdbdbd;
+    font-size: 30px;
+    padding: 20px;
 }
 
 #f i:hover {
-	color: #ff7878;
+    color: #ff7878;
 }
 
 /****** SECTIONS *****/
 
 .w {
-	padding-top: 35px;
+    padding-top: 35px;
 }
 
 .w h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .w i {
-	color: #ff7878;
-	font-size: 30px;
+    color: #ff7878;
+    font-size: 30px;
 }
 
 
 .wb {
-	padding-top: 35px;
-	margin-bottom: 0px;
+    padding-top: 35px;
+    margin-bottom: 0px;
 }
 
 .wb h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .desc {
-	padding-top: 35px;
+    padding-top: 35px;
 }
 
 .desc h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .desc i {
-	color: #ff7878;
-	font-size: 12px;
-	padding: 5px;
+    color: #ff7878;
+    font-size: 12px;
+    padding: 5px;
 }
 
 /***** MODAL CONTACT *****/
 .modal-content {
-	border-radius: 0px;
+    border-radius: 0px;
 
 }
 
 .modal-header {
-	background: #bdbdbd;
-	color: white;
+    background: #bdbdbd;
+    color: white;
 }
 
 .modal-header h4 {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .modal-body {
-	background: #f2f2f2;
+    background: #f2f2f2;
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
@@ -309,8 +309,8 @@ a:after {
 }
 
 .modal-footer {
-	background: #f2f2f2;
-	margin-top: 0px; 
+    background: #f2f2f2;
+    margin-top: 0px; 
 }
 
 /* ==========================================================================
