--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -10,7 +10,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #000000;
 }
 
 /* Custom default button */
@@ -31,12 +31,12 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #000000;
+  background-color: #f2f2f2;
 }
 body {
-  color: #fff;
+  color: #555;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  text-shadow: none;
   box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
