--- a/app/views/page/usershoutouts.html.erb
+++ b/app/views/page/usershoutouts.html.erb
@@ -3,7 +3,7 @@
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 				<h4>WE WORK HARD TO ACHIEVE EXCELLENCE</h4>
-				<p>AND WE ARE HAPPY TO DO IT</p>
+				<p>AND WE ARE HAPPY TO HEAR YOUR THOUGHTS</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -90,7 +90,6 @@
             Bates College<br/>
             2 Andrews Rd<br/>
             Lewiston, ME 04240<br/>
-            mbrady4@bates.edu
               </p>
               <div id="mapwrap">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2864.9222621237614!2d-70.20318600000003!3d44.10559600000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb26b95e156aed5%3A0xe09394fc40abee2!2sBates+College!5e0!3m2!1sen!2sus!4v1400625080357" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
