Fixing up the asset pipeline

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -14,25 +14,25 @@
 		<div class="row centered">
 			<br><br>
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/mich.jpg" width="175" height="175" alt="">
+				<img class="img-circle" src="<%= image_path "mich.jpg" %>" width="175" height="175" alt="">
 				<h4>Michaela Brady</h4>
 				<p>She does some stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/cat.jpg" width="175" height="175" alt="">
+				<img class="img-circle" src="<%= image_path "cat.jpg" %>" width="175" height="175" alt="">
 				<h4>Cat Dioli</h4>
 				<p>She handles other stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/chelsea.jpg" width="175" height="175" alt="">
+				<img class="img-circle" src="<%= image_path "chelsea.jpg" %>" width="175" height="175" alt="">
 				<h4>Chelsea Thompson</h4>
 				<p>She does more stuff.</p>
 			</div><!-- col-lg-3 -->
 
 			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic4.jpg" width="175" height="175" alt="">
+				<img class="img-circle" src="<%= image_path "pic4.jpg" %>" width="175" height="175" alt="">
 				<h4>Tania Tissen</h4>
 				<p>Just joined in.</p>
 			</div><!-- col-lg-3 -->
@@ -62,15 +62,15 @@
 				<p><b>How big is the problem?</b></p>
 				<p><small>“A quarter of teens respond to a text message once or more every time they drive. 20 percent of teens and 10 percent of parents admit that they have extended, multi-message text conversations while driving.” Official US Government Website for Distracted Driving, Distraction.Gov.</small></p> 
 				<p><small>In the United States alone, 90% of adults have a cell phone and 58% of those users have a Smartphone.  Within this user pool, 67% of cell owners reportedly check their phones for messages, alerts, or calls—even if their phone isn’t ringing.  By 2012, over 17.3 billion text messages were sent by these users every month.</small></p>
-				<p><small>But teens aren't the only ones on their phones in the car.  Parents and drivers everywhere can take advantage of our app.   
+				<p><small>But teens aren't the only ones on their phones in the car.  Parents and drivers everywhere can take advantage of our app.</small></p>   
 			</div><!-- /col-lg-3 -->
-			
+
 			<!-- Third Chart -->
 			<div class="col-lg-4">
 				<p><b>Fixing the Problem</b></p>
-				<p><small>Set up a profile.  Each profile begins with a name, email, password, and cell phone number. You'll then be prompted for a verification code, which has been sent to the number you provided via text message.  Once the your number is verified your can begin.</small></p>
+				<p><small>Set up a profile.  Each profile begins with a name, email, password, and cell phone number. You'll then be prompted for a verification code, which has been sent to the number you provided via text message.  Once the your number is verified your can begin.</small></p> 
 				<p><small>Hook your phone up to your computer.  The online interface identifies all of the apps on your phone and allows you to pick which applications to block on their phone.</small></p>
-				<p><small>When the phone is in a car in motion it automatically locks down the pre-selected applications and does not re-open them until the car has stopped.  TexBlock communicates directly with the GPS in cars; for earlier model cars without GPS, there is a secondary device available for purchase.</small></p> 
+				<p><small>When the phone is in a car in motion it automatically locks down the pre-selected applications and does not re-open them until the car has stopped.  TexBlock communicates directly with the GPS in cars; for earlier model cars without GPS, there is a secondary device available for purchase.</small></p>
 			</div><!-- /col-lg-3 -->
 			</div><!-- row -->
 		</div><!-- container -->
