--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -133,7 +133,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-    background: url(../img/background.jpg) no-repeat center top;
+    background: url(<%= image_path "background.jpg" %>) no-repeat center top;
     margin-top: -10px;
     padding-top:20px;
     text-align:center;
