--- a/app/views/page/usershoutouts.html.erb
+++ b/app/views/page/usershoutouts.html.erb
@@ -27,7 +27,7 @@
 		<br><br>
 		<div class="row">
 			<div class="col-lg-6 centered">
-				<img src="<%= image_path "assets/img/andrea.jpg" %>" alt="" height="350" width="300">
+				<img src="<%= image_path "andrea.jpg" %>" alt="" height="350" width="300">
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6">
 				<h4>Becca Ruth</h4>
@@ -40,7 +40,7 @@
 		<br><br>
 		<div class="row">
 			<div class="col-lg-6 centered">
-				<img src="<%= image_path "assets/img/carsales.jpg" %>" alt="" height="350" width="300">
+				<img src="<%= image_path "carsales.jpg" %>" alt="" height="350" width="300">
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6">
 				<h4>Burt Michaelson</h4>
