--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -323,7 +323,7 @@ a:after {
 
 .pricing-option .pricing-top {
     position: relative;
-    background: #222;
+    background: #F67E7E;
     color: white;
     text-align: center;
     font-weight: bold;
