--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -76,6 +76,7 @@
                             <li><strong>24/7</strong> Support</li>
                             <li>Compatable with <strong>iOS and Android</strong> devices</li>
                         </ul>
+                        <a href="http://store.apple.com/us" target="_blank" class="pricing-signup">DOWNLOAD</a>
                     </div><!-- /pricing-option -->
                     <!-- END PRICING TABLE -->
 				</div><!-- /col -->
@@ -96,6 +97,7 @@
                             <li><strong>Use in any car</strong></li>
                             <li><strong>1-year free replacement</strong></li>
                         </ul>
+                        <a href="/download" class="pricing-signup">ORDER</a>
                     </div><!-- /pricing-option -->
                     <!-- END PRICING TABLE -->
 				</div><!-- /col -->
