--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
             <li class="active"><a href="/">HOME</a></li>
             <li><a href="/about">ABOUT</a></li>
             <li><a href="/services">SERVICES</a></li>
+            <li><a href="/download">DOWNLOAD</a></li>
             <li><a href="/usershoutouts">USER SHOUTOUTS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
               <% if user_signed_in? %>
